creating html app.component

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,13 +14,13 @@
 <div *ngIf="user">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title" style="font-size: 20px;"><strong>GitHub Name: {{user.name}}</strong></h3>
+      <h3 class="panel-title" style="font-size: 20px;"><strong>Git Name: {{user.name}}</strong></h3>
     </div>
     <div class="panel-body">
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <img class="img-thumbnail" src="{{user.avatar_url}}">
-          <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">View Profile</a>
+          <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">Get Profile</a>
         </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
