creating html app.component

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -26,7 +26,7 @@
         <div class="col-md-8 col-sm-8 col-xs-12">
           <div class="stats">
             <p>{{user.bio}}</p>
-            <span class="label label-default">{{user.public_repos}} Public Repos</span>
+            <span class="label label-default">{{user.public_repos}} Public Repository</span>
             <span class="label label-success">{{user.followers}} Followers</span>
             <span class="label label-info">{{user.following}} Following</span>
             <span class="label label-danger">{{user.company}}</span>
