--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -44,7 +44,7 @@
               <strong>Email: </strong>{{user.email}}
             </li>
             <li class="list-group-item">
-              <strong>Member Since: </strong>{{user.created_at}}
+              <strong>Created on: </strong>{{user.created_at}}
             </li>
           </ul>
         </div>
