--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -54,7 +54,7 @@
 <div class="container" style="padding: right 500px;">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title" style="text-align:center"><strong>User Repos</strong></h3>
+      <h3 class="panel-title" style="text-align:center"><strong>User Repository</strong></h3>
     </div>
     <div class="panel-body">
       <div *ngFor="let repo of repos">
