adding htm components

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,7 +14,7 @@
 <div *ngIf="user">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title" style="font-size: 20px;"><strong>GitHub Name: {{user.name}}</strong></h3>
+      <h3 class="panel-title" style="font-size: 20px;"><strong>Git User-Name: {{user.name}}</strong></h3>
     </div>
     <div class="panel-body">
       <div class="row">
