adding htm components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <body>
 <div class="container">
  <div class="jumbotron"> 
-    <h3><strong>GitHub Search</strong></h3>
+    <h3><strong>Git Search</strong></h3>
   </div>
   <app-profile></app-profile>
-  <p>©RAMZA | 2018</p>
+  <p>©IZRA | 2020</p>
 </div>
 </body>
