adding htm components

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <img class="img-thumbnail" src="{{user.avatar_url}}">
-          <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">View Profile</a>
+          <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">Get Profile</a>
         </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
@@ -35,7 +35,7 @@
           <br/>
           <ul class="list-group">
             <li class="list-group-item">
-              <strong>Username: </strong>{{user.name}}
+              <strong>Git User-name: </strong>{{user.name}}
             </li>
             <li class="list-group-item">
               <strong>Location: </strong>{{user.location}}
@@ -44,7 +44,7 @@
               <strong>Email: </strong>{{user.email}}
             </li>
             <li class="list-group-item">
-              <strong>Member Since: </strong>{{user.created_at}}
+              <strong>Created on: </strong>{{user.created_at}}
             </li>
           </ul>
         </div>
