--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
   border-radius: 30px;
   background-color: rgb(6, 245, 65);
   opacity: 0.5;
-  margin: 10px;
+  margin: 20px;
 }
 
 
@@ -25,5 +25,6 @@ body {
 }
 
 .container{
-  opacity: 0.85;
+  opacity: 0.6;
+  background-color: black;
 }
